<resources>
    <string name="app_name">YalantisTaskOne</string>
    <string name="tx_title">Public service</string>
    <string name="tx_status">In work</string>
    <string name="tx_created">Created</string>
    <string name="tx_registred">Registred</string>
    <string name="tx_resolve">Resolve to</string>
    <string name="tx_responsible">Responsible</string>
    <string name="tx_sometext">Opened hatch(near the billboard),the area of 18 and 19 trams turn to the Peace avenue from the Donetsk roadway</string>
    <string name="tx_created_value">February 25 2016</string>
    <string name="tx_registred_value">February 26 2016</string>
    <string name="tx_resolve_value">February 29 2016</string>
    <string name="tx_responsible_value">Dnipropetrovsk MVK()</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_work">В роботі</string>
    <string name="is_done">Виконано</string>
    <string name="undone">Не виконано</string>
    <string name="filter">Filter</string>
    <string name="e_contact">e-contact</string>
    <string name="all_probs">Все проблемы</string>
    <string name="on_map">На карте</string>
    <string name="login">Войти в аккаунт</string>
    <string name="all_tasks">Всі звернення</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="done">Виконано</string>
    <string-array name="drawer_items">
        <item>Usi zvernennya</item>
        <item>Zvernennya na mapi</item>
    </string-array>

    <string name="facebook_app_id">868722999938543</string>
</resources>
