<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainView"
    tools:context=".activities.MainActivity">

    <RelativeLayout style="@style/RelativeStyle">

        <TextView
            android:id="@+id/title"
            style="@style/HeaderStyle"
            android:text="@string/tx_title" />

        <TextView
            android:id="@+id/status"
            style="@style/StatusStyle"
            android:layout_below="@+id/title"
            android:text="@string/tx_status" />

        <View
            android:id="@+id/divider1"
            style="@style/MyDivider"
            android:layout_below="@+id/status" />

        <TextView
            android:id="@+id/created"
            style="@style/TitleStyle"
            android:layout_below="@+id/divider1"
            android:text="@string/tx_created" />

        <TextView
            style="@style/DateStyle"
            android:layout_alignEnd="@+id/divider1"
            android:layout_alignRight="@+id/divider1"
            android:layout_alignTop="@+id/created"
            android:text="@string/tx_created_value" />

        <View
            android:id="@+id/divider2"
            style="@style/MyDivider"
            android:layout_below="@+id/created" />

        <TextView
            android:id="@+id/registered"
            style="@style/TitleStyle"
            android:layout_below="@id/divider2"
            android:text="@string/tx_registred" />

        <TextView
            style="@style/DateStyle"
            android:layout_above="@+id/divider3"
            android:layout_alignEnd="@+id/divider2"
            android:layout_alignRight="@+id/divider2"
            android:text="@string/tx_registred_value" />

        <View
            android:id="@+id/divider3"
            style="@style/MyDivider"
            android:layout_below="@+id/registered" />

        <TextView
            android:id="@+id/complete"
            style="@style/TitleStyle"
            android:layout_below="@id/divider3"
            android:text="@string/tx_resolve" />

        <TextView
            style="@style/DateStyle"
            android:layout_above="@+id/divider4"
            android:layout_alignEnd="@+id/divider3"
            android:layout_alignRight="@+id/divider3"
            android:text="@string/tx_resolve_value" />

        <View
            android:id="@+id/divider4"
            style="@style/MyDivider"
            android:layout_below="@+id/complete" />

        <TextView
            android:id="@+id/responsible"
            style="@style/TitleStyle"
            android:layout_below="@id/divider4"
            android:text="@string/tx_responsible" />

        <TextView
            style="@style/DateStyle"
            android:layout_above="@+id/divider5"
            android:layout_alignEnd="@+id/divider4"
            android:layout_alignRight="@+id/divider4"
            android:text="@string/tx_responsible_value" />

        <View
            android:id="@+id/divider5"
            style="@style/MyDivider"
            android:layout_below="@+id/responsible" />

        <TextView
            android:id="@+id/some_text"
            style="@style/SomeTextStyle"
            android:layout_below="@id/divider5"
            android:text="@string/tx_sometext" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/image_recycler_view"
            style="@style/RecyclerStyle"
            android:layout_below="@+id/some_text" />
    </RelativeLayout>
</ScrollView>
